# demos_cpp

./: .gitignore
opencv/: CMakeLists.txt  demo.cpp
